# career-ops

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  harness-1.tex  interview-sim.mjs  liveness-api.mjs  liveness-core.mjs  package.json  scan.mjs  test-all.mjs  tracker-links.mjs  vercel.json
.agents/skills/career-ops/: SKILL.md
.github/workflows/: release.yml
career-ops-workspace/: .gitignore  LOCAL_SETUP.md  package.json  pnpm-lock.yaml
career-ops-workspace/apps/backend/: .env.example  package.json
career-ops-workspace/apps/frontend/: .env.example  package.json  vite.config.ts
career-ops-workspace/apps/worker/: .gitignore  README.md  pyproject.toml
career-ops-workspace/apps/worker/control/: celery.pidbox.exchange
career-ops-workspace/apps/worker/src/: celery_app.py  client_trigger.py  config.py
career-ops-workspace/apps/worker/src/tasks/: __init__.py  test_tasks.py
config/: profile.example.yml
modes/: _profile.md
modes/ko/: _shared.md  apply.md  auto-pipeline.md  batch.md  contacto.md  deep.md  fit.md  followup.md  interview-prep.md  interview-sim.md  jasoseo.md  latex.md  oferta.md  ofertas.md  patterns.md  pdf.md  pipeline.md  project.md  scan.md  tracker.md  training.md
providers/: _korean-html.mjs  jumpit.mjs  programmers.mjs  wanted.mjs
templates/: cv-template.html
web-wrapper/: .env.example  .gitignore  README.md  start.bat
web-wrapper/agent-ts/: package.json
web-wrapper/backend/: requirements.txt
web-wrapper/frontend/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
(+43 files in other folders)
