[tool.poetry]
name = "career-ops-worker"
version = "0.1.0"
description = "Python Celery Worker for career-ops AI orchestration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
pg8000 = "^1.31.5"
redis = "^8.0.0"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
